baml_language/crates/baml_tests/snapshots/diagnostic_errors/match_exhaustiveness/baml_tests__diagnostic_errors__match_exhaustiveness__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 50133
---
=== PPIR ===
class user.Bird {
  name: string
}
class user.Bird$stream {
  name: string | null
}
class user.Cat {
  name: string
}
class user.Cat$stream {
  name: string | null
}
class user.Dog {
  name: string
}
class user.Dog$stream {
  name: string | null
}
class user.Failure {
  reason: string
}
class user.Failure$stream {
  reason: string | null
}
class user.Fish {
  name: string
}
class user.Fish$stream {
  name: string | null
}
class user.Pending {
  eta: int
}
class user.Pending$stream {
  eta: int | null
}
class user.Success {
  data: string
}
class user.Success$stream {
  data: string | null
}
enum user.DispatchState {Alpha, Beta, Gamma, Delta}
enum user.Status {Active, Inactive, Pending}
type user.AlwaysFalse = false
type user.AlwaysFalse$stream = false
type user.AlwaysTrue = true
type user.AlwaysTrue$stream = true
type user.CustomBool = true | false
type user.CustomBool$stream = true | false
type user.DoubleMaybe = user.MaybeResult?
type user.DoubleMaybe$stream = user.MaybeResult$stream | null
type user.FullResult = user.Success | user.Failure | user.Pending
type user.FullResult$stream = user.Success$stream | user.Failure$stream | user.Pending$stream
type user.HttpCreated = 201
type user.HttpCreated$stream = 201
type user.HttpOk = 200
type user.HttpOk$stream = 200
type user.MaybeOk = 200?
type user.MaybeOk$stream = 200 | null
type user.MaybeResult = user.Result?
type user.MaybeResult$stream = user.Result$stream | null
type user.MixedLiterals = 200 | "success" | true
type user.MixedLiterals$stream = 200 | "success" | true
type user.OkCode = 200
type user.OkCode$stream = 200
type user.OkOrCreated = user.OkCode | 201
type user.OkOrCreated$stream = user.OkCode$stream | 201
type user.Result = user.Success | user.Failure
type user.Result$stream = user.Success$stream | user.Failure$stream
type user.Role = "user" | "assistant" | "system"
type user.Role$stream = "user" | "assistant" | "system"
type user.SuccessCode = 200 | 201 | 204
type user.SuccessCode$stream = 200 | 201 | 204
type user.SuccessOr200 = user.Success | 200
type user.SuccessOr200$stream = user.Success$stream | 200
function user.BoolLiteralAfterTypedBool(b: bool) -> string  [expr] {
  {  } match (b) { x: bool => "any bool", true => "unreachable" }
}
function user.BoolUnionPattern(b: bool) -> string  [expr] {
  {  } match (b) { true | false => "covered" }
}
function user.BoolWithCatchAll(b: bool) -> string  [expr] {
  {  } match (b) { true => "yes", _ => "no" }
}
function user.DeeplyNestedLiterals(x: user.SuccessCode) -> string  [expr] {
  {  } match (x) { 200 | 201 | 204 => "all success codes" }
}
function user.DuplicateBoolLiteral(b: bool) -> string  [expr] {
  {  } match (b) { true => "first true", true => "second true", false => "false" }
}
function user.DuplicateEnumVariant(s: user.Status) -> string  [expr] {
  {  } match (s) { user.Status.Active => "first", user.Status.Active => "second", user.Status.Inactive => "inactive", user.Status.Pending => "pending" }
}
function user.DuplicateIntLiteral(x: int) -> string  [expr] {
  {  } match (x) { 1 => "first one", 1 => "second one", _ => "other" }
}
function user.DuplicateStringLiteral(role: user.Role) -> string  [expr] {
  {  } match (role) { "user" => "first user", "user" => "second user", "assistant" => "assistant", "system" => "system" }
}
function user.EnumVariantAfterTypedEnum(s: user.Status) -> string  [expr] {
  {  } match (s) { x: user.Status => "any status", user.Status.Active => "unreachable" }
}
function user.EnumVariantUnion(s: user.Status) -> string  [expr] {
  {  } match (s) { user.Status.Active | user.Status.Pending => "actionable", user.Status.Inactive => "inactive" }
}
function user.EnumVariantUnionWithCatchAll(s: user.Status) -> string  [expr] {
  {  } match (s) { user.Status.Active | user.Status.Pending => "actionable", _ => "other" }
}
function user.ExhaustiveAliasOfLiterals(code: user.OkOrCreated) -> string  [expr] {
  {  } match (code) { 200 => "ok", 201 => "created" }
}
function user.ExhaustiveBool(b: bool) -> string  [expr] {
  {  } match (b) { true => "yes", false => "no" }
}
function user.ExhaustiveClassPlusLiteral(x: user.SuccessOr200) -> string  [expr] {
  {  } match (x) { s: user.Success => s.data, 200 => "http ok" }
}
function user.ExhaustiveCustomBool(b: user.CustomBool) -> string  [expr] {
  {  } match (b) { true => "yes", false => "no" }
}
function user.ExhaustiveDoubleMaybe(dm: user.DoubleMaybe) -> string  [expr] {
  {  } match (dm) { s: user.Success => s.data, f: user.Failure => f.reason, null => "nothing" }
}
function user.ExhaustiveEnumAllVariants(s: user.Status) -> string  [expr] {
  {  } match (s) { user.Status.Active => "active", user.Status.Inactive => "inactive", user.Status.Pending => "pending" }
}
function user.ExhaustiveEnumWithCatchAll(s: user.Status) -> string  [expr] {
  {  } match (s) { user.Status.Active => "active", _ => "other" }
}
function user.ExhaustiveEnumWithTypedPattern(s: user.Status) -> string  [expr] {
  {  } match (s) { x: user.Status => "any status" }
}
function user.ExhaustiveFalseType(f: user.AlwaysFalse) -> string  [expr] {
  {  } match (f) { false => "always false" }
}
function user.ExhaustiveIntLiterals(code: user.SuccessCode) -> string  [expr] {
  {  } match (code) { 200 => "OK", 201 => "Created", 204 => "No Content" }
}
function user.ExhaustiveLiteralWithBaseType(x: int) -> string  [expr] {
  {  } match (x) { 200 => "ok", n: int => "other" }
}
function user.ExhaustiveMixedLiterals(x: user.MixedLiterals) -> string  [expr] {
  {  } match (x) { 200 => "http ok", "success" => "string success", true => "boolean true" }
}
function user.ExhaustiveNullableEnum(s: user.Status?) -> string  [expr] {
  {  } match (s) { user.Status.Active => "active", user.Status.Inactive => "inactive", user.Status.Pending => "pending", null => "no status" }
}
function user.ExhaustiveNullableEnumWithTypedPattern(s: user.Status?) -> string  [expr] {
  {  } match (s) { x: user.Status => "some status", null => "no status" }
}
function user.ExhaustiveOptional(x: int?) -> string  [expr] {
  {  } match (x) { n: int => "has value", null => "no value" }
}
function user.ExhaustiveOptionalSingleton(code: user.MaybeOk) -> string  [expr] {
  {  } match (code) { 200 => "OK", null => "no code" }
}
function user.ExhaustiveSingletonInt(code: user.HttpOk) -> string  [expr] {
  {  } match (code) { 200 => "OK" }
}
function user.ExhaustiveStringLiterals(role: user.Role) -> string  [expr] {
  {  } match (role) { "user" => "User", "assistant" => "Assistant", "system" => "System" }
}
function user.ExhaustiveTrueType(t: user.AlwaysTrue) -> string  [expr] {
  {  } match (t) { true => "always true" }
}
function user.ExhaustiveTypeAlias(r: user.Result) -> string  [expr] {
  {  } match (r) { s: user.Success => s.data, f: user.Failure => f.reason }
}
function user.ExhaustiveTypeAliasWithCatchAll(r: user.Result) -> string  [expr] {
  {  } match (r) { s: user.Success => s.data, _ => "fallback" }
}
function user.ExhaustiveWithNamedCatchAll(x: int) -> int  [expr] {
  {  } match (x) { 1 => 100, other => other Add 1 }
}
function user.ExhaustiveWithUnderscore(x: int) -> int  [expr] {
  {  } match (x) { 1 => 100, 2 => 200, _ => 0 }
}
function user.GetStatus() -> user.Status  [expr] {
  {  } Status.Active
}
function user.GuardedOnlyNonExhaustive(x: int) -> int  [expr] {
  {  } match (x) { n: int => n Mul 2, n: int => n Mul Neg 1 }
}
function user.GuardedWithFallback(x: int) -> int  [expr] {
  {  } match (x) { n: int => n Mul 2, _ => 0 }
}
function user.HighLineNumberNonExhaustive(s: user.Status) -> string  [expr] {
  {  } match (s) { user.Status.Active => "active only" }
}
function user.IntLiteralUnionPattern(code: user.SuccessCode) -> string  [expr] {
  {  } match (code) { 200 | 201 => "success with body", 204 => "no content" }
}
function user.JumpTableClassTypeTag(pet: user.Cat | user.Dog | user.Bird | user.Fish) -> string  [expr] {
  {  } match (pet) { c: user.Cat => "cat", d: user.Dog => "dog", b: user.Bird => "bird", f: user.Fish => "fish" }
}
function user.JumpTableEnumDiscriminant(state: user.DispatchState) -> int  [expr] {
  {  } match (state) { user.DispatchState.Alpha => 10, user.DispatchState.Beta => 20, user.DispatchState.Gamma => 30, user.DispatchState.Delta => 40 }
}
function user.JumpTableTypeTag(value: int | string | bool | float) -> string  [expr] {
  {  } match (value) { i: int => "int", s: string => "string", b: bool => "bool", f: float => "float" }
}
function user.LiteralAfterTypedPattern(x: int) -> string  [expr] {
  {  } match (x) { n: int => "int", 42 => "unreachable" }
}
function user.LiteralUnionWithCatchAll(code: int) -> string  [expr] {
  {  } match (code) { 200 | 201 => "success", 400 | 404 => "client error", _ => "other" }
}
function user.MatchArithmeticScrutinee(a: int, b: int) -> string  [expr] {
  {  } match (a Add b) { 0 => "zero", 1 => "one", _ => "other" }
}
function user.MatchComplexScrutinee(x: int) -> string  [expr] {
  {  } match (x Mul 2 Add 1) { 1 => "x was 0", 3 => "x was 1", _ => "other" }
}
function user.MatchFunctionCallScrutinee() -> string  [expr] {
  {  } match (GetStatus()) { user.Status.Active => "active", user.Status.Inactive => "inactive", user.Status.Pending => "pending" }
}
function user.MixedPatterns(x: int) -> string  [expr] {
  {  } match (x) { 0 => "zero", 1 => "one", n: int => "positive", _ => "negative" }
}
function user.MultipleUnreachableSpans(s: user.Status) -> string  [expr] {
  {  } match (s) { user.Status.Active => "active", user.Status.Active => "duplicate 1", user.Status.Inactive => "inactive", user.Status.Active => "duplicate 2", user.Status.Pending => "pending" }
}
function user.NestedEnumMatch(s1: user.Status, s2: user.Status) -> string  [expr] {
  {  } match (s1) { user.Status.Active => match (s2) { user.Status.Active => "both active", user.Status.Inactive => "first active, sec...", user.Status.Pending => "first active, sec..." }, user.Status.Inactive => "first inactive", user.Status.Pending => "first pending" }
}
function user.NestedEnumVariantUnions(s: user.Status) -> string  [expr] {
  {  } match (s) { user.Status.Active | user.Status.Pending | user.Status.Inactive => "all statuses" }
}
function user.NestedLiteralUnions(code: int) -> string  [expr] {
  {  } match (code) { 200 | 201 | 202 | 204 => "success", 400 | 404 | 405 | 406 | 409 => "client error", _ => "other" }
}
function user.NestedMatchSpans(x: int, y: bool) -> string  [expr] {
  {  } match (x) { 0 => match (y) { true => "zero true", false => "zero false", true => "unreachable nested" }, _ => "other" }
}
function user.NestedTypeAlias(mr: user.MaybeResult) -> string  [expr] {
  {  } match (mr) { s: user.Success => s.data, f: user.Failure => f.reason, null => "nothing" }
}
function user.NestedTypeBindings(r: user.Result) -> int  [expr] {
  {  } match (r) { s: user.Success | user.Failure => 0, f: user.Failure => 1 }
}
function user.NonExhaustiveAliasOfLiterals(code: user.OkOrCreated) -> string  [expr] {
  {  } match (code) { 200 => "ok" }
}
function user.NonExhaustiveBoolMissingFalse(b: bool) -> string  [expr] {
  {  } match (b) { true => "yes" }
}
function user.NonExhaustiveBoolMissingTrue(b: bool) -> string  [expr] {
  {  } match (b) { false => "no" }
}
function user.NonExhaustiveClassPlusLiteralMissingClass(x: user.SuccessOr200) -> string  [expr] {
  {  } match (x) { 200 => "http ok" }
}
function user.NonExhaustiveClassPlusLiteralMissingLiteral(x: user.SuccessOr200) -> string  [expr] {
  {  } match (x) { s: user.Success => s.data }
}
function user.NonExhaustiveCustomBoolMissing(b: user.CustomBool) -> string  [expr] {
  {  } match (b) { true => "yes" }
}
function user.NonExhaustiveDoubleMaybeMissingNull(dm: user.DoubleMaybe) -> string  [expr] {
  {  } match (dm) { s: user.Success => s.data, f: user.Failure => f.reason }
}
function user.NonExhaustiveEnumMissingMultiple(s: user.Status) -> string  [expr] {
  {  } match (s) { user.Status.Active => "active" }
}
function user.NonExhaustiveEnumMissingOne(s: user.Status) -> string  [expr] {
  {  } match (s) { user.Status.Active => "active", user.Status.Inactive => "inactive" }
}
function user.NonExhaustiveFullResultMissingOne(r: user.FullResult) -> string  [expr] {
  {  } match (r) { s: user.Success => s.data, f: user.Failure => f.reason }
}
function user.NonExhaustiveIntLiteral(code: user.SuccessCode) -> string  [expr] {
  {  } match (code) { 200 => "OK", 201 => "Created" }
}
function user.NonExhaustiveMixedLiterals(x: user.MixedLiterals) -> string  [expr] {
  {  } match (x) { 200 => "http ok", "success" => "string success" }
}
function user.NonExhaustiveNullableEnumMissingNull(s: user.Status?) -> string  [expr] {
  {  } match (s) { user.Status.Active => "active", user.Status.Inactive => "inactive", user.Status.Pending => "pending" }
}
function user.NonExhaustiveNullableEnumMissingVariant(s: user.Status?) -> string  [expr] {
  {  } match (s) { user.Status.Active => "active", user.Status.Inactive => "inactive", null => "no status" }
}
function user.NonExhaustiveOptionalMissingNull(code: user.MaybeOk) -> string  [expr] {
  {  } match (code) { 200 => "OK" }
}
function user.NonExhaustiveOptionalMissingValue(code: user.MaybeOk) -> string  [expr] {
  {  } match (code) { null => "no code" }
}
function user.NonExhaustiveStringLiteral(role: user.Role) -> string  [expr] {
  {  } match (role) { "user" => "User", "assistant" => "Assistant" }
}
function user.NonExhaustiveTrueTypeWrongLiteral(t: user.AlwaysTrue) -> string  [expr] {
  {  } match (t) { false => "wrong!" }
}
function user.NonExhaustiveTypeAliasMissingOne(r: user.Result) -> string  [expr] {
  {  } match (r) { s: user.Success => s.data }
}
function user.OptionalWithCatchAll(x: int?) -> string  [expr] {
  {  } match (x) { null => "no value", _ => "has value" }
}
function user.OverlappingTypedPatterns(r: user.Result) -> string  [expr] {
  {  } match (r) { user.Success => "success", user.Success | user.Failure => "covers failure on..." }
}
function user.OverlappingWithBindings(r: user.Result) -> string  [expr] {
  {  } match (r) { s: user.Success => s.data, x: user.Success | user.Failure => "remaining" }
}
function user.ParenthesizedSingleLiteral(b: bool) -> string  [expr] {
  {  } match (b) { true => "yes", false => "no" }
}
function user.PartialUnionPatternCoverage(r: user.FullResult) -> string  [expr] {
  {  } match (r) { x: user.Success | user.Failure => "not pending" }
}
function user.PartialUnionPlusCatchAll(r: user.FullResult) -> string  [expr] {
  {  } match (r) { x: user.Success | user.Failure => "success or failure", user.Pending => "pending" }
}
function user.StringLiteralAfterStringType(s: string) -> string  [expr] {
  {  } match (s) { x: string => "any string", "hello" => "unreachable" }
}
function user.StringLiteralUnionPattern(role: user.Role) -> string  [expr] {
  {  } match (role) { "user" | "assistant" => "chat participant", "system" => "system" }
}
function user.StringLiteralWithCatchAll(role: user.Role) -> string  [expr] {
  {  } match (role) { "user" => "User message", "assistant" => "Assistant message", _ => "Other" }
}
function user.ThreeLevelNestedMatch(x: int, y: int, z: int) -> string  [expr] {
  {  } match (x) { 0 => match (y) { 0 => match (z) { 0 => "all zero", _ => "z nonzero" }, _ => "y nonzero" }, _ => "x nonzero" }
}
function user.UnionPatternCoversAll(r: user.Result) -> string  [expr] {
  {  } match (r) { x: user.Success | user.Failure => "covered" }
}
function user.UnreachableAfterCatchAll(x: int) -> string  [expr] {
  {  } match (x) { _ => "catch all", n: int => "never reached" }
}
function user.UnreachableMultiple(x: int) -> string  [expr] {
  {  } match (x) { _ => "catch all", n: int => "unreachable 1", m: int => "unreachable 2" }
}
function user.WrongLiteralTypeBoolWithInt(b: bool) -> string  [expr] {
  {  } match (b) { 42 => "wrong type" }
}
function user.WrongLiteralTypeIntWithString(x: int) -> string  [expr] {
  {  } match (x) { "hello" => "wrong type" }
}
